fix mobile flex wrap

--- a/src/sass/adblock.sass
+++ b/src/sass/adblock.sass
@@ -405,3 +405,7 @@ footer>div
 	display: flex
 	align-items: center
 	gap: .5rem
+
+@media (max-width: 424px)
+	.notice
+		flex-wrap: wrap
